src/main/resources/sf-resource/SfServerPkgs/objects/ReleasePackage__c.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PackageParentId__c</fullName>
        <formula>Package__r.ParentPackageID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PackageParentId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>ReleasePackages</relationshipLabel>
        <relationshipName>ReleasePackages</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <referenceTo>Releases__c</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>ReleasePackages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Package</label>
    <nameField>
        <displayFormat>RP-{0000000000}</displayFormat>
        <label>ReleasePackage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ReleasePackages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>